cập nhật thêm thêm ảnh. tạo productcontroler vv

--- a/webluuniem/Views/Shared/_Layout.cshtml
+++ b/webluuniem/Views/Shared/_Layout.cshtml
@@ -37,6 +37,15 @@
             width: 30px;
             height:30px;
         }
+        .img-avatar{
+            border: solid 1px blue;
+            width: 60px;
+            height: auto;
+            border-radius: 50%;
+        }
+            .img-avatar:hover {
+                border: solid 2px red;
+            }
     </style>
 </head>
 <body>
@@ -75,21 +84,18 @@
                             @if (Session["Fullname"] != null)
                             {
                                 <div class="widget-header mr-3">
-                                    <a href="#" class="widget-view">
-                                        <div class="icon-area">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-person-vcard text-success hover" viewBox="0 0 16 16">
-                                                <path d="M5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm4-2.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5ZM9 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 9 8Zm1 2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Z" />
-                                                <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2ZM1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8.96c.026-.163.04-.33.04-.5C9 10.567 7.21 9 5 9c-2.086 0-3.8 1.398-3.984 3.181A1.006 1.006 0 0 1 1 12V4Z" />
-                                            </svg>
-                                           
+                                    <a href="Home/Profile" class="widget-view ">
+                                        <div style="width: 60px; height: 60px;">
+
+                                            <img src="~/Content/images/avatars/@Session["Avatar"]" class="img-avatar" title="Trang cá nhân"/>
                                         </div>
-                                        <small class="text">Cá nhân</small>
+                                       
                                     </a>
                                 </div>
-                                if (Session["IsAdmin"].ToString() == true.ToString())
+                                if (@Session["IsAdmin"].ToString() == true.ToString())
                                 {
                                     <div class="widget-header mr-3">
-                                        <a href="#" class="widget-view">
+                                        <a href="~/Admin/Home" class="widget-view">
                                             <div class="icon-area">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-briefcase-fill text-success hover" viewBox="0 0 16 16">
                                                     <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5z" />
