--- a/webluuniem/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/webluuniem/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Dashboard 2</title>
+    <title>Trang quản trị</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -19,7 +19,7 @@
 
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__wobble" src="~/Content/admin/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+            <img class="animation__wobble" src="~/Content/admin/dist/img/AdminLTELogo.png" alt="Admin" height="60" width="60">
         </div>
 
         <!-- Navbar -->
@@ -30,10 +30,29 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
+                    <a href="~/Admin/Home/index" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="~/Admin/User" class="nav-link">Users</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Category" class="nav-link">Categorys</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Brand" class="nav-link">Brands</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Product" class="nav-link">Products</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Order" class="nav-link">Orders</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Post" class="nav-link">Post</a>
+                </li>
+
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="~/Admin/Contact" class="nav-link">Contact</a>
                 </li>
             </ul>
 
@@ -71,7 +90,7 @@
                         <a href="#" class="dropdown-item">
                             <!-- Message Start -->
                             <div class="media">
-                                <img src="~/Content/admin/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                                <img src="~/Content/images/avatars/@Session["Avatar"]" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
                                         Brad Diesel
@@ -847,7 +866,7 @@
         <!-- /.control-sidebar -->
         <!-- Main Footer -->
         <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">cuongwon</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 3.1.0
