--- a/webluuniem/Views/Home/Login.cshtml
+++ b/webluuniem/Views/Home/Login.cshtml
@@ -23,7 +23,7 @@
     
     <div class="form-horizontal">
         <h2>Đăng Nhập</h2>
-        <h3 style="color:red">@ViewData["error"]</h3>
+        <h4 style="color:red;">@ViewData["error"]</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -37,11 +37,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+
+                @Html.TextBoxFor(model => model.Password, new { @class = "form-control", Type = "password" })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div>
+            <h4 style="color:red;">@ViewData["error"]</h4>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Đăng Nhập" class="btn btn-success" />
